# makerspet_loki

./: CMakeLists.txt  README.md  package.xml
3mf/: Battery Pack 3x9V Upright Lid.3mf  Battery Pack 3x9V Upright.3mf  Bumper back.3mf  Caster wheel with break-off pedestal.3mf  Handset Clamp.3mf  Handset Footrest.3mf  Head.3mf  Middle plate.3mf  Motor bracket x2.3mf  README.md  Upper plate.3mf  YDLidar X4 plate.3mf
arduino/: README.md
arduino/loki-esp32/: PID_v1_0_0.cpp  PID_v1_0_0.h  README.md  YDLidar.cpp  YDLidar.h  ap.cpp  ap.h  drive.cpp  drive.h  loki-esp32.h  loki-esp32.ino  robot_config.h  util.cpp  util.h  xv_lib.cpp  xv_lib.h  yd_lib.cpp  yd_lib.h
arduino/loki-esp32/data/: index.html  wifimanager.html
arduino/loki-pico-body/: led.py
arduino/loki-pico-head/: loki-pico-head.ino  robot_config.h
arduino/loki-pico-head/MicroPython/: i2cSlave.py  main.py
config/: README.md  cartographer_lds_2d.lua  explore_lite.yaml  navigation.yaml  self_drive_gazebo.yaml  telem.yaml  teleop_keyboard.yaml
firmware/kaia-esp32/: YDLidar.cpp  YDLidar.h  ap.cpp  drive.cpp  drive.h  v8stdint.h
firmware/loki-esp32/: ap.cpp  ap.h  drive.h  util.cpp
firmware/loki-esp32/data/: style.css
firmware/makerspet-loki-esp32/: ap.h  makerspet-loki-esp32.h  makerspet-loki-esp32.ino  util.cpp  util.h
fusion360/: README.md
hardware/: README.md
hardware/3mf/: Battery 3x9V Upright Pedestal.3mf  Battery Holder 9v x3.3mf  Battery Holder Cover 9v x3.3mf  Battery Pedestal.3mf  Bottom plate.3mf  Bumper front.3mf  Bumper x2.3mf  Caster wheel.3mf  Handset Clamp.3mf  Handset Footrest.3mf  Head.3mf  Middle plate.3mf  Motor bracket x2.3mf  Upper plate.3mf  YDLidar X4 plate.3mf
hardware/stl/: Battery 3x9V Upright Pedestal.stl  Battery Holder 9v x3.stl  Battery Holder Cover 9v x3.stl  Battery Pack 3x9V Upright.stl  Battery Pedestal.stl  Bumper front.stl  Bumper x2.stl  Handset Clamp.stl  Handset Footrest.stl  Motor bracket x2.stl  Motor bracket.stl  Upper plate.stl
kicad/: README.md
map/: kaia_world.yaml  kaiaai_world.yaml  living_room.pgm  living_room.yaml
mods/: README.md
mods/bumper/stl/: Bumper back.stl
mods/ears/3mf/: Ear Bone Mirror.3mf  Ear Bone.3mf  Head.3mf  Servo Standoff Mirror.3mf
mods/ears/stl/: Ear Bone Mirror.stl  (+1 more)
rviz/: cartographer.rviz  gazebo.rviz  inspect_urdf.rviz  makerspet_loki.rviz  monitor_robot.rviz  navigation.rviz
script/: clone_robot_description.sh  urdf2sdf.sh
sdf/kaia_loki/: model.config  model.sdf
sdf/makerspet_loki/: model.config  model.sdf
stl/: Battery Pack 3x9V Upright Lid.stl  Bumper back.stl  Handset Clamp.stl  Handset Footrest.stl  Motor bracket x2.stl  README.md
urdf/: README.md  kaia_loki.urdf.xacro  makerspet_loki.urdf.xacro  robot.urdf.xacro
(+19 files in other folders)
