<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>makerspet_loki</name>
  <version>0.0.0</version>
  <description>Maker's Pet Loki pet robot compatible with Kaia.ai software platform</description>

  <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://makerspet.com</url>
  <url type="repository">https://github.com/makerspet/makerspet_loki</url>
  <url type="bugtracker">https://github.com/makerspet/makerspet_loki/issues</url>
  <author email="iliao@remake.ai">Ilia O.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/sdf"/>
  </export>
</package>
